--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mapbox/rehype-prism": "^0.6.0",
+    "github-markdown-css": "^4.0.0",
     "next": "^11.0.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "rehype-katex": "^5.0.0",
+    "remark-math": "^3.0.1"
   },
   "devDependencies": {
     "@mdx-js/loader": "^1.6.22",
