--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
   },
   "dependencies": {
     "@mapbox/rehype-prism": "^0.6.0",
+    "@types/jsdom": "^16.2.13",
     "babel-plugin-superjson-next": "^0.3.1",
     "clsx": "^1.1.1",
     "date-fns": "^2.23.0",
     "github-markdown-css": "^4.0.0",
+    "jsdom": "^17.0.0",
     "next": "^11.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "rehype-slug": "^4.0.1",
     "rehype-katex": "^5.0.0",
+    "rehype-slug": "^4.0.1",
     "remark-math": "^3.0.1",
     "superjson": "^1.7.5"
   },
