--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@mapbox/rehype-prism": "^0.6.0",
     "@types/jsdom": "^16.2.13",
     "babel-plugin-superjson-next": "^0.3.1",
