--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "autoprefixer": "^10.3.1",
     "next-compose-plugins": "^2.2.1",
     "postcss": "^8.3.6",
+    "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^2.2.7",
     "typescript": "^4.3.5"
   }
