--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "rehype-katex": "^5.0.0",
     "rehype-slug": "^4.0.1",
     "remark-math": "^3.0.1",
-    "superjson": "^1.7.5"
+    "superjson": "^1.7.5",
+    "utterances-react-component": "^1.0.0"
   },
   "devDependencies": {
     "@mdx-js/loader": "^1.6.22",
