--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "rehype-katex": "^5.0.0",
     "rehype-slug": "^4.0.1",
     "remark-math": "^3.0.1",
+    "serverless-mysql": "^1.5.4",
     "superjson": "^1.7.5",
     "utterances-react-component": "^1.0.0"
   },
