--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@mapbox/rehype-prism": "^0.6.0",
+    "@types/cookie": "^0.4.1",
     "@types/jsdom": "^16.2.13",
     "babel-plugin-superjson-next": "^0.3.1",
     "clsx": "^1.1.1",
+    "cookie": "^0.4.1",
     "date-fns": "^2.23.0",
     "github-markdown-css": "^4.0.0",
     "jsdom": "^17.0.0",
