--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@mapbox/rehype-prism": "^0.6.0",
     "@types/cookie": "^0.4.1",
     "@types/jsdom": "^16.2.13",
     "babel-plugin-superjson-next": "^0.3.1",
@@ -29,6 +28,7 @@
     "rehype-katex": "^5.0.0",
     "rehype-slug": "^4.0.1",
     "remark-math": "^3.0.1",
+    "remark-prism": "^1.3.6",
     "serverless-mysql": "^1.5.4",
     "superjson": "^1.7.5",
     "swr": "^0.5.6",
