--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "next": "^11.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-ga": "^3.3.0",
+    "react-ga4": "^1.0.6",
     "rehype-katex": "^5.0.0",
     "rehype-slug": "^4.0.1",
     "remark-math": "^3.0.1",
