--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "github-markdown-css": "^4.0.0",
     "jsdom": "^17.0.0",
     "next": "^11.1.0",
+    "next-seo": "^4.26.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-ga4": "^1.0.6",
