--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
@@ -44,6 +45,7 @@
     "@types/react-dom": "^17.0.9",
     "autoprefixer": "^10.3.1",
     "next-compose-plugins": "^2.2.1",
+    "next-sitemap": "^1.6.168",
     "postcss": "^8.3.6",
     "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^2.2.7",
