--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "skipLibCheck": true,
     "strict": true,
     "target": "esnext",
-    "baseUrl": "."
+    "baseUrl": ".",
+    "incremental": true
   },
   "exclude": [
     "node_modules"
