--- a/package.json
+++ b/package.json
@@ -9,12 +9,6 @@
     "postbuild": "next-sitemap"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.3",
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-brands-svg-icons": "^5.15.3",
-    "@fortawesome/free-regular-svg-icons": "^5.15.3",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/react-fontawesome": "^0.1.14",
     "@types/cookie": "^0.4.1",
     "@types/jsdom": "^16.2.13",
     "babel-plugin-superjson-next": "^0.3.1",
@@ -28,13 +22,14 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-ga4": "^1.0.6",
+    "react-icons": "^4.3.1",
     "rehype-katex": "^5.0.0",
     "rehype-slug": "^4.0.1",
     "remark-math": "^3.0.1",
     "remark-prism": "^1.3.6",
     "serverless-mysql": "^1.5.4",
     "superjson": "^1.7.5",
-    "swr": "^0.5.6",
+    "swr": "^1.1.1",
     "utterances-react-component": "^1.0.0"
   },
   "devDependencies": {
