--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-ga4": "^1.0.6",
     "react-icons": "^4.3.1",
+    "react-shadow": "^19.0.2",
     "rehype-katex": "^5.0.0",
     "rehype-slug": "^4.0.1",
     "remark-math": "^3.0.1",
