--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "date-fns": "^2.23.0",
     "github-markdown-css": "^4.0.0",
     "jsdom": "^17.0.0",
+    "mobx": "^6.6.1",
+    "mobx-react-lite": "^3.4.0",
     "next": "^12.0.7",
     "next-seo": "^4.26.0",
     "react": "^17.0.2",
@@ -29,7 +31,8 @@
     "remark-prism": "^1.3.6",
     "serverless-mysql": "^1.5.4",
     "swr": "^1.1.1",
-    "utterances-react-component": "^1.0.0"
+    "utterances-react-component": "^1.0.0",
+    "zod": "^3.17.10"
   },
   "devDependencies": {
     "@mdx-js/loader": "^1.6.22",
