--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
     "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^3.0.5",
     "typescript": "^4.3.5"
+  },
+  "engines": {
+    "node": ">=16"
   }
 }
