--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@types/cookie": "^0.4.1",
     "@types/jsdom": "^16.2.13",
+    "@types/three": "^0.155.0",
     "clsx": "^1.1.1",
     "cookie": "^0.4.1",
     "date-fns": "^2.23.0",
     "github-markdown-css": "^4.0.0",
     "jsdom": "^17.0.0",
+    "mafs": "^0.17.1",
     "mobx": "^6.6.1",
     "mobx-react-lite": "^3.4.0",
     "next": "^12.0.7",
@@ -31,6 +33,7 @@
     "remark-prism": "^1.3.6",
     "serverless-mysql": "^1.5.4",
     "swr": "^1.1.1",
+    "three": "^0.155.0",
     "utterances-react-component": "^1.0.0",
     "zod": "^3.17.10"
   },
