--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "postbuild": "next-sitemap"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.2.1",
+    "@codemirror/legacy-modes": "^6.3.3",
     "@types/cookie": "^0.4.1",
     "@types/jsdom": "^16.2.13",
     "@types/three": "^0.155.0",
     "clsx": "^1.1.1",
+    "codemirror": "^6.0.1",
     "cookie": "^0.4.1",
     "date-fns": "^2.23.0",
     "github-markdown-css": "^4.0.0",
@@ -33,6 +36,7 @@
     "remark-prism": "^1.3.6",
     "serverless-mysql": "^1.5.4",
     "swr": "^1.1.1",
+    "thememirror": "^2.0.1",
     "three": "^0.155.0",
     "utterances-react-component": "^1.0.0",
     "zod": "^3.17.10"
